newtype-tools/tests/newtype-fail/struct-tuple.rs
#[derive(newtype_tools::Newtype)]
struct N(u64, u64);

fn main() {}
